# ableton-mcp-lofifren

./: README.md  pyproject.toml
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: __init__.py  music.py  personalities.py  server.py
scripts/: ableton_client.py  audition_personalities.py  demo_personality_bands.py  make_pop_trap_song.py  make_sleep_song.py
