[project]
name = "ableton-mcp-lofifren"
version = "1.1.0"
description = "Ableton Live MCP integration — fork of ahujasid/ableton-mcp adding a 33-personality style system, ~35 extra MCP tools, batch commands, and arrangement-view BETA"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Siddharth Ahuja", email = "ahujasid@gmail.com"}
]
maintainers = [
    {name = "LofiFren"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
ableton-mcp-lofifren = "MCP_Server.server:main"

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MCP_Server"]

[project.urls]
"Homepage" = "https://github.com/LofiFren/ableton-mcp-lofifren"
"Bug Tracker" = "https://github.com/LofiFren/ableton-mcp-lofifren/issues"
"Upstream" = "https://github.com/ahujasid/ableton-mcp"